Add key rotation API support
